--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,16 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.10.13</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-cassandra</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-joda</artifactId>
+			<version>2.12.3</version> <!-- Make sure to match the version with your Jackson version -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
